Fix ol/ul/li font size on mobile

--- a/app/app/static/css/app.css
+++ b/app/app/static/css/app.css
@@ -177,7 +177,10 @@ footer {
   .post-title {
     font-size: 1.9rem;
   }
-  .post-content p {
+  .post-content p,
+  .post-content ul,
+  .post-content ol,
+  .post-content li {
     font-size: 1.05rem;
   }
 }
